# Victorien_Bigarre_Portfolio

./: README.md  _config.yaml
projects/: README.md
projects/Borders/: Escondido.py  Interface.py  Optimizer.py  Process.py  Resultats.py  Viz.ipynb  run.bat
projects/IA4_Battery/: Viz.ipynb  process.py
projects/Revenue_Management/: .gitignore  README.md  environment.py  pyproject.toml  requirements.txt  utils.py  visualisation.py
projects/Revenue_Management/data/: demand_matrix_564375.json  demand_matrix_564795.json  demand_matrix_564809.json  demand_matrix_564969.json  demand_matrix_693243.json  demand_matrix_693700.json  demand_matrix_695686.json
projects/Tchoutchou/: Model.py  data_process.py  viz.ipynb
